OO-3426: implements templates folder for portfolio